kubernetes/apps/services/collabora/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: collabora
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: collabora
      app.kubernetes.io/instance: collabora
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
            gateway.networking.k8s.io/gateway-name: kgateway-internal
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: services
            app.kubernetes.io/name: oxicloud
      toPorts:
        - ports:
            - port: "9980"
              protocol: TCP
  egress:
    # DNS
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # OxiCloud WOPI callbacks via HTTPS through the internal gateway
    - toServices:
        - k8sService:
            serviceName: kgateway-internal
            namespace: network
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # External HTTPS
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
